--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.5.0",
     "pg": "^7.8.1"
   }
 }
