--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/database/build.js && node src/app.js",
-    "start:watch": "nodemon src/app.js",
+    "start": "node src/database/build.js && node src/index.js",
+    "start:watch": "nodemon src/index.js",
     "test": "tape test/database.test.js | tap-spec && tape test/server.test.js | tap-spec"
   },
   "repository": {
