--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "istanbul": "^0.4.5",
     "supertest": "^3.4.2",
     "tap-spec": "^5.0.0",
-    "tape": "^4.10.1"
+    "tape": "^4.10.1",
+    "env2": "^2.2.2"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
-    "env2": "^2.2.2",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "express-session": "^1.15.6",
